# counterApplication

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/data/: counter_data.cpp  counter_data.h  counter_query.cpp  counter_query.h  database.cpp  database.h
src/presentation/: counter.h  mainwindow.cpp  mainwindow.h
src/usecase/: counter_usecase.cpp  counter_usecase.h  frequency_usecase.cpp  frequency_usecase.h
src/usecase/bases/: counter_data_interface.h  counter_query_interface.h  database_interface.h
src/usecase/entity/: counter_entity.cpp  counter_entity.h
